--- a/context_analyzer.html
+++ b/context_analyzer.html
@@ -175,5 +175,8 @@
             lucide.createIcons();
         });
     </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-config.js"></script>
+<script src="app-reset-loader.js"></script>
 </body>
 </html>
