--- a/marketing_description_generator.html
+++ b/marketing_description_generator.html
@@ -109,8 +109,10 @@
     <footer class="suite-footer">
         <p>&copy; 2024 Storebot Pro Suite.</p>
     </footer>
-
     <script src="common_utils.js"></script>
     <script src="marketing_description_generator.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-config.js"></script>
+<script src="app-reset-loader.js"></script>
 </body>
 </html>
