--- a/brand_matcher.html
+++ b/brand_matcher.html
@@ -62,5 +62,8 @@
     <script src="common_utils.js"></script>
 <script src="brand-database.js"></script>
     <script src="brand_matcher.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-config.js"></script>
+<script src="app-reset-loader.js"></script>
 </body>
 </html>
