--- a/formaps_integration.html
+++ b/formaps_integration.html
@@ -156,5 +156,8 @@
     <script src="common_utils.js"></script>
     <script src="formaps_integration.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-config.js"></script>
+<script src="app-reset-loader.js"></script>
 </body>
 </html>
