--- a/full_report.html
+++ b/full_report.html
@@ -115,5 +115,8 @@
 
     <script src="common_utils.js"></script>
     <script src="full_report.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-config.js"></script>
+<script src="app-reset-loader.js"></script>
 </body>
 </html>
