--- a/settings.html
+++ b/settings.html
@@ -107,5 +107,8 @@
             updateAllStatuses();
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-config.js"></script>
+<script src="app-reset-loader.js"></script>
 </body>
 </html>
