--- a/formaps_integration.html
+++ b/formaps_integration.html
@@ -84,7 +84,7 @@
                 </div>
                 <iframe 
                     id="formapsIframe"
-                    src="https://www.formaps.it/" 
+                    src="https://storebot-proxy-luqlxmnqy-carlos-projects-b4e8f15d.vercel.app/api/proxy"
                     title="Formaps - Analisi Territoriale"
                     allowfullscreen
                     allow="geolocation; camera"
