--- a/formaps_integration.html
+++ b/formaps_integration.html
@@ -84,7 +84,7 @@
                 </div>
                 <iframe 
                     id="formapsIframe"
-                    src="https://storebot-proxy.vercel.app/api/proxy"
+                    src="https://storebot-proxy.vercel.app/api/cors-proxy?url=https://www.formaps.it"
                     title="Formaps - Analisi Territoriale"
                     allowfullscreen
                     allow="geolocation; camera"
